YAML Files/namespace-serviceaccount-secret.yml
#creating namespace
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress
