YAML Files/pv-nfs-ok.yml
apiVersion: v1
kind: Pod
metadata:
  name: task-pv-pod1
  labels:
    name: task-pv-pod1
spec:
  containers:
  - name: task-pv-container
    image: nginx:1.9
    ports:
    - containerPort: 80
      name: "http-server"	
    securityContext:
      privileged: true
    volumeMounts:
      - name: task-pv-storage
        mountPath: "/etc/nginx/conf.d"
  volumes:
  - name: task-pv-storage
    nfs:
      server: isilon01.ussl.uhs
      path: /ifs/isilon01/nfs/docker-content
