YAML Files/Google-Cloud-Registry.yaml
apiVersion: v1
kind: Pod
metadata:
  name: registry
  labels:
    app: registry
  namespace: docker-registry
spec:
  containers:
  - name: registry
    image: registry:2
    imagePullPolicy: Always
    ports:
      - containerPort: 5000
    volumeMounts:
      - name: registry-storage
        mountPath: "/var/lib/registry"
  volumes:
    - name: registry-storage
      persistentVolumeClaim:
       claimName: registry-claim
---
kind: Service
apiVersion: v1
metadata:
  name: registry
  namespace: docker-registry
spec:
  selector:
    app: registry
  ports:
    - port: 5000
      targetPort: 5000
