YAML Files/TEJA ZABBIX.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zabbix
---
apiVersion: v1
kind: Pod
metadata:
  name: zabbix-server-mysql
  namespace: zabbix
  labels:
    name: zabbix-server-mysql
    app: zabbix-app
spec:
  containers:
    - name: zabbix-server-mysql
      image: zabbix/zabbix-server-mysql:latest
      ports:           
        - containerPort: 10051
          name: zabbix-sql
---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-server-mysql
  namespace: zabbix
  labels:
    name: zabbix-server-mysql
    app: zabbix-app
spec:
  ports:
    - port: 10051
      targetPort: 10051
  selector:
    name: zabbix-server-mysql
    app: zabbix-app
  type: ClusterIP
---
apiVersion: v1
kind: Pod
metadata:
  name: zabbix-java-gateway
  namespace: zabbix
  labels:
    name: zabbix-java-gateway
    app: zabbix-app
spec:
  containers:
    - name: zabbix-java-gateway
      image: zabbix/zabbix-java-gateway:latest
      ports:           
        - containerPort: 10052
          name: gateway
---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-java-gateway
  namespace: zabbix
  labels:
    name: zabbix-java-gateway
    app: zabbix-app
spec:
  ports:
    - port: 10052
      targetPort: 10052
      nodePort: 30002
  selector:
    name: zabbix-java-gateway
    app: zabbix-app
  type: NodePort
---
apiVersion: v1
kind: Pod
metadata:
  name: zabbix-web-nginx-mysql
  namespace: zabbix
  labels:
    name: zabbix-web-nginx-mysql
    app: zabbix-app
spec:
  containers:
    - name: zabbix-web-nginx-mysql
      image: zabbix/zabbix-web-nginx-mysql:latest
      ports:           
        - containerPort: 80
          name: zabbix-nginx
---
apiVersion: v1
kind: Service
metadata:
  namespace: zabbix
  name: zabbix-web-nginx-mysql
  labels:
    name: zabbix-web-nginx-mysql
    app: zabbix-app
spec:
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30003
  selector:
    name: zabbix-web-nginx-mysql
    app: zabbix-app
  type: NodePort
---
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: phpmyadmin
  name: phpmyadmin
  namespace: zabbix
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    name: phpmyadmin
  type: NodePort
---
apiVersion: v1
kind: Pod
metadata:
  name: phpmyadmin
  namespace: zabbix
  labels:
    name: phpmyadmin
spec:
  containers:
    - name: phpmyadmin
      image: phpmyadmin/phpmyadmin
      ports:           
        - containerPort: 80
          name: phpmyadmin
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
      name: nginx-deployment
      namespace: zabbix
spec:
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - name: nginx-storage
            mountPath: "/etc/nginx/conf.d"
      volumes:
      - name: nginx-storage
        nfs:
          server: isilon01.ussl.uhs
          path: /ifs/isilon01/nfs/docker-content/zabbix    
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  namespace: zabbix
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  externalIPs: 
    - 10.16.131.218
