YAML Files/Zabbix-java-Gateway.yaml
apiVersion: v1
kind: Pod
metadata:
  name: zabbix-java-gateway
  labels:
    name: zabbix-java-gateway
    app: zabbix-app
spec:
  containers:
    - name: zabbix-java-gateway
      image: zabbix/zabbix-java-gateway:latest
      ports:           
        - containerPort: 10052
          name: gateway
---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-java-gateway
  labels:
    name: zabbix-java-gateway
    app: zabbix-app
spec:
  ports:
    - port: 10052
      targetPort: 10052
  selector:
    name: zabbix-java-gateway
    app: zabbix-app
  type: NodePort
