YAML Files/nginx-mon-teja.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
      name: nginx-deployment
      namespace: monitoring
spec:
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - name: nginx-storage
            mountPath: "/etc/nginx/conf.d"
      volumes:
      - name: nginx-storage
        nfs:
          server: isilon01.ussl.uhs
          path: /ifs/isilon01/nfs/docker-content    
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  externalIPs: 
    - 10.16.131.220
