YAML Files/persistent volume.yml
kind: Pod
apiVersion: v1
metadata:
  name: task-pv-pod
  labels:
    name: task-pv-pod
spec:
  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
       claimName: task-pv-claim
  containers:
    - name: task-pv-container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/etc/nginx/conf.d"
          name: task-pv-storage
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: task-pv-pod
  name: task-pv-pod
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    name: task-pv-pod
  type: NodePort
