YAML Files/phpmyadmin-ingress-nginx.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: phpmyadmin
  name: phpmyadmin
  namespace: ingress-nginx
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    name: phpmyadmin
  type: NodePort
---
apiVersion: v1
kind: Pod
metadata:
  name: phpmyadmin
  labels:
    name: phpmyadmin
  namespace: ingress-nginx
spec:
  containers:
    - name: phpmyadmin
      image: phpmyadmin/phpmyadmin
      ports:           
        - containerPort: 80
          name: phpmyadmin
