YAML Files/zabbix-mysql-server.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: zabbix-server-mysql
  labels:
    name: zabbix-server-mysql
    app: zabbix-app
spec:
  containers:
    - name: zabbix-server-mysql
      image: zabbix/zabbix-server-mysql:latest
      ports:           
        - containerPort: 10051
          name: zabbix-sql
---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-server-mysql
  labels:
    name: zabbix-server-mysql
    app: zabbix-app
spec:
  ports:
    - port: 10051
      targetPort: 10051
  selector:
    name: zabbix-server-mysql
    app: zabbix-app
  type: NodePort
---
