YAML Files/zabbix-web-nginx-mysql.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: zabbix-web-nginx-mysql
  labels:
    name: zabbix-web-nginx-mysql
    app: zabbix-app
spec:
  containers:
    - name: zabbix-web-nginx-mysql
      image: zabbix/zabbix-web-nginx-mysql:latest
      ports:           
        - containerPort: 80
          name: zabbix-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-web-nginx-mysql
  labels:
    name: zabbix-web-nginx-mysql
    app: zabbix-app
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    name: zabbix-web-nginx-mysql
    app: zabbix-app
  type: NodePort
---
